# FMI

./: .gitignore  .gitmodules  CMakeLists.txt
2021-2023/Course1/OOP-Sem2/: notes.cpp
2023-2024/OOP/ExamPrep/: CMakeLists.txt
2023-2024/OOP/Homeworks/: CMakeLists.txt
2023-2024/OOP/RetakeExam/RetakeHomework/: ArrayDataSource.inl  CMakeLists.txt  DefaultDataSource.inl  PrimeNumberGenerator.h  StatelessGenerator.inl  main.cpp  to.txt
2023-2024/OOP/Sem10/: CMakeLists.txt  Tests.cpp
2023-2024/OOP/Structures/: CMakeLists.txt  Task6_3.cpp  Task6_4.cpp  Task6_5.cpp  Task7_5.cpp  Test_Task.cpp
2023-2024/OOP/Structures/T9_1/: Time.h
2023-2024/OOP/Structures/T9_3/: Dictionary.h
2023-2024/R/: .Rhistory  ExamPrepFinal.R  examtry.R  file2.csv  hw02.R  test2.R
2024-2025/APIS/: notes.md  question-form.md  vision.md
2024-2025/APIS/feedback-2025-05-07/: notes.md
2024-2025/APIS/lecture-2025-05-19/: notes.md
2024-2025/APIS/lecture-design-model/: lecture-design-model.md
2024-2025/APIS/lecture-use-cases/: lecture-use-case.md
2024-2025/APIS/meeting-2025-03-30/: agenda-notes.md
2024-2025/APIS/meeting-2025-04-02/: agenda-notes.md
2024-2025/APIS/meeting-2025-04-09/: agenda-notes.md
2024-2025/APIS/meeting-2025-05-20/: notes.md
2024-2025/APIS/meetins-2025-03-26/: meeting.md
2024-2025/APIS/notes-meeting-17-05-2025/: notes.md
2024-2025/APIS/practice-sequence-model/: practice-sequence-model.md
2024-2025/DSOP/: Readme.md  T01-delivery-and-lifecycle.md  T02-aproaches-to-software-delivery.md  devops.excalidraw  regulationtask.md  task.md
2024-2025/INOVATIONS/: bussiness-model.md
2024-2025/KOMURE/: cultureNetwork.md  t02.md  t06-non-verbal-comunication-public-space.md  t07-functions-of-non-verbal-communication.md  t08.md  t09.md  t10.md  t11-kinesika.md  t12-jestove.md  t13.md  to7-functions-of-non-verbal-communication.md
2024-2025/NEBESNA-MECHANICA/: plt.py  plt2.py
2024-2025/OOP/: .gitignore  lecture01.md  lecture02.md  lecture03.md  lecture04.md  lecture05.md  lecture06.md  lecture08.md
2024-2025/OOP/SPEEDTASK/: CMakeLists.txt  main.cpp
2024-2025/OOP/turn-based-game/: .gitignore  Armor.cpp  Armor.h  Base.cpp  Base.h  BaseImports.h  CMakeLists.txt  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  LeaderEnums.h  Leaders.cpp  Leaders.h  LivingUnits.cpp  LivingUnits.h  Readme.md  UndeadUnits.cpp  UndeadUnits.h  Unit.cpp  Unit.h  Validator.cpp  Validator.h  Validator2.cpp  Validator2.h  main.cpp  test1.cpp
2024-2025/OOP/turn-based-game/config/: config.txt
2024-2025/OOP/turn-based-game/living-creatures/: Archer.cpp  Archer.h  BladeDancer.cpp  BladeDancer.h  Healer.cpp  Healer.h  Infantryman.cpp  Infantryman.h  Knight.cpp  Knight.h  Paladin.cpp  Paladin.h  UndeadHunter.cpp  UndeadHunter.h  Wizard.cpp  Wizard.h  Wizzard.cpp  Wizzard.h
2024-2025/OOP/turn-based-game/undead-creatures/: DeathKnight.cpp  DeathKnight.h  Dreadlord.cpp  Dreadlord.h  Dybbuk.cpp  Dybbuk.h  Ghost.cpp  Ghost.h  Ghoul.cpp  Ghoul.h  Lich.cpp  Lich.h  Necromancer.cpp  Necromancer.h  Revenant.cpp  Revenant.h  Skeleton.cpp  Skeleton.h  Zombie.cpp  Zombie.h
2024-2025/RITARH/IMPORTANT-NOTES/: notes.md
2024-2025/SAE/: g_article.docx  gypsies.docx  translation.md  translation2nd.md  uninformed_love.docx
2024-2025/SOZ-knowledge-systems/: Untitled-2023-12-04-1800.excalidraw  search4e.ipynb
2024-2025/SOZ-knowledge-systems/hw02/: Readme.md  agro-products.owx  agro-products.properties
2024-2025/SOZ-knowledge-systems/hw1/: Readme.md  fn3mi0700035.py
2024-2025/SOZ-knowledge-systems/lecture14/: t14.md  t16.md
2024-2025/SOZ-knowledge-systems/owl/: person.owx  person.properties  pizza.owx
2024-2025/SUBD/EX01_Simple_SQL_Queries/: TASKS.sql
2024-2025/SUBD/EX02/: TASKS.sql
2024-2025/SUBD/EX02_Retrieving_Data/: TASKS.sql
2024-2025/SUBD/EX03/: TASKS.sql
2024-2025/SUBD/EX03_Scalar_Functions/: TASKS.sql
2024-2025/SUBD/EX04_Grouping_Functions/: TASKS.sql
2024-2025/SUBD/EX05_Subqueries/: TASKS.sql
2024-2025/SUBD/EX06_UDF/: TASKS.sql
2024-2025/SUBD/EX07_TRIGGERS/: TASKS.sql
2024-2025/SUBD/EX08_Procedures/: TASKS.sql
2024-2025/SUBD/EX09_Recursive_Sql/: TASKS.sql  TASKS2.sql
2024-2025/SUBD/EXAM2/: TASKS.sql
2024-2025/SUBD/EXAM3/: TASKS.sql
2024-2025/SUBD/HW1/: TASKS.sql
2024-2025/SUBD/Lectures/: indexes.md
2024-2025/SUBD/PRACTICE/: TASKS.sql
2024-2025/SUBD/PRACTICUM/: dad.sql  test.sql
2024-2025/xml-technologies/agro-nursery-warehouse/: .gitignore  (+7 more)
2024/OOP/RetakeExam/ETablesProject/: CMakeLists.txt  Cell.cpp  Cell.h  CellValueInterpreter.cpp  CellValueInterpreter.h  CmdInterpreter.cpp  CmdInterpreter.h  Interpretator.cpp  Interpretator.h  Optional.h  Optional.inl  Table.cpp  Table.h  Utility.h  main.cpp  table.txt  table2.txt
2024/OOP/RetakeExam/RetakeHomework/: AlternateDataSource.h  AlternateDataSource.inl  CMakeLists.txt  DataSource.h  FileDataSource.inl  Generator.inl  GeneratorDataSource.h  GeneratorDataSource.inl  main.cpp  to.txt
2024/OOP/RetakeExam/RetakeHomework/DataSources/: AlternateDataSource.h  AlternateDataSource.inl  ArrayDataSource.h  ArrayDataSource.inl  DataSource.h  DataSource.inl  DefaultDataSource.h  DefaultDataSource.inl  FileDataSource.h  FileDataSource.inl  GeneratorDataSource.h  GeneratorDataSource.inl
2024/OOP/RetakeExam/RetakeHomework/Generators/: Generator.h  PrimeNumberGenerator.inl  StatelessGenerator.h  StatelessGenerator.inl
2024/OOP/Structures/: CMakeLists.txt  Task6_6.cpp
2024/OOP/Structures/T9_1/: main.cpp
2024/R/: .RData  .Rhistory  VerzaniProblemSet.R  hw.docx  hw01.R  tEST.R
2025-2026/oop/: Car.h  Date.cpp  Date.h  exam01.md  main.cpp
2025-2026/oop/exam01/: CMakeLists.txt  Date.cpp  Date.h  README.md  main.cpp
2025-2026/project-management/: charter.md  critical-path.excalidraw  notes.md  notes2.md  notes3.md  notes4.md  notes5.md  notes6.md  notes7.md  upr-notes.md  upr-notes2.md  upr-notes3.md  upr-notes4.md
2025-2026/smeb-sebiz/: notes.md  notes2.md  notes3.md  notes4.md  notes5.md  notes6.md  workshop.md
Course1/Haskell/: test.hs
Course1/OOP-Sem2/: notes.cpp
Intro-Programming-Sem1/week01/: firstProgram.cpp
(+2002 files in other folders)
