cmake_minimum_required(VERSION 3.0)

project(OopStructures)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Task6_3
        Task6_3.cpp
)

add_executable(Task6_4
        Task6_4.cpp
)
add_executable(Task6_5
        Task6_5.cpp
)

add_executable(Task6_6
        Task6_6.cpp
)
